@@ -1,5 +1,5 @@
-= acts_as_paranoid
+= paranoid_fu
 
 Overrides some basic methods for the current model so that calling #destroy sets a 'deleted_at' field to the current timestamp.  ActiveRecord is required.
 
-http://github.com/scambra/acts_as_paranoid
+http://github.com/scambra/paranoid_fu
