@@ -1,1 +1,1 @@
-require File.join(File.dirname(__FILE__), 'lib/acts_as_paranoid')
+require File.join(File.dirname(__FILE__), 'lib/paranoid_fu')
