@@ -1,15 +1,15 @@
-module ActsAsParanoid
+module ParanoidFu
   module ReflectionConditions
     def self.included(base)
       base.class_eval do
-        alias_method_chain :sanitized_conditions, :acts_as_paranoid
+        alias_method_chain :sanitized_conditions, :paranoid_fu
       end
     end
   
     # Returns the SQL string that corresponds to the <tt>:conditions</tt>
     # option of the macro, if given, or +nil+ otherwise.
-    def sanitized_conditions_with_acts_as_paranoid
-      sanitized_conditions_without_acts_as_paranoid
+    def sanitized_conditions_with_paranoid_fu
+      sanitized_conditions_without_paranoid_fu
       if !self.options[:polymorphic] && self.options.delete(:without_deleted)
         klass = if self.through_reflection
           self.through_reflection.klass
